--- a/index.html
+++ b/index.html
@@ -4,8 +4,65 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Green Earth</title>
+    <link rel="stylesheet" href="style.css">
+
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+    <!-- Inter Font connect -->
+     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>Green Earth</h1>
+    <!-- Navbar section start  -->
+    <nav class="max-w-[1920px] justify-center flex bg-[#15803D]">
+        <div class="navbar mx-[135px]">
+  <div class="navbar-start">
+    <div class="dropdown">
+      <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"> <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" /> </svg>
+      </div>
+      <ul
+        tabindex="0"
+        class="menu menu-sm dropdown-content bg-base-100 rounded-box z-1 mt-3 w-52 p-2 shadow">
+        <li><a>Item 1</a></li>
+       <li><a>Item 2</a></li>
+        <li><a>Item 3</a></li>
+      </ul>
+    </div>
+    <!-- <a class="btn btn-ghost text-xl">daisyUI</a> -->
+    <h2 class="text-white text-[22px]">Green Earth</h2>
+  </div>
+  <div class="navbar-center hidden lg:flex">
+    <ul class="menu menu-horizontal px-1 text-white text-[16px]">
+      <li><a>Item 1</a></li>
+      <li>
+        <li><a>Item 2</a></li>
+      </li>
+      <li><a>Item 3</a></li>
+    </ul>
+  </div>
+  <div class="navbar-end">
+    <a class="btn rounded-[50px] text-[#15803D] bg-[#FACC15] border-none">Plant a Tree</a>
+  </div>
+</div>
+    </nav>
+
+    <!-- Banner section start  -->
+    <div class="banner">
+      <div class="banner2 text-center items-center space-y-5">
+        <h1 class="text-[48px] font-bold">Plant a Tree, Grow a Future</h1>
+        <p>Join our mission to plant 1 million trees and make the Earth greener for<br> future generations.</p>
+        <a class="btn rounded-[50px] text-[#15803D] bg-[#FACC15] border-none">Get Involved</a>  
+      </div>
+    </div>
+
+
+    <h1>hello test <i class="fa-solid fa-xmark"></i></h1>
+    <script src="index.js"></script>
 </body>
 </html>
