plant a tree todo

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 </head>
 <body>
     <!-- Navbar section start  -->
-    <nav class="max-w-[1920px] justify-center flex bg-[#15803D]">
-        <div class="navbar mx-[135px]">
+    <nav class=" justify-center flex bg-[#15803D]">
+  <div class="navbar container max-w-[1920px]">
   <div class="navbar-start">
     <div class="dropdown">
       <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
@@ -54,12 +54,63 @@
 
     <!-- Banner section start  -->
     <div class="banner">
-      <div class="banner2 text-center items-center space-y-5">
-        <h1 class="text-[48px] font-bold">Plant a Tree, Grow a Future</h1>
-        <p>Join our mission to plant 1 million trees and make the Earth greener for<br> future generations.</p>
-        <a class="btn rounded-[50px] text-[#15803D] bg-[#FACC15] border-none">Get Involved</a>  
+      <div class="banner2 flex items-center">
+        <div class="text-center w-full  space-y-5" >
+          <h1 class="text-[48px] font-bold">Plant a Tree, Grow a Future</h1>
+          <p>Join our mission to plant 1 million trees and make the Earth greener for<br> future generations.</p>
+          <a class="btn rounded-[50px] text-[#15803D] bg-[#FACC15] border-none">Get Involved</a>  
+        </div>
       </div>
     </div>
+
+
+<br>
+<br>
+<br>
+<br>
+<br>
+
+
+    <!-- Our Impact section start  -->
+    <div class="text-center justify-center flex w-full bg-[#CFF0DC]">
+          <div class="container text-center space-y-10 py-20">
+              <h1 class="text-[32px] font-semibold ">Our Impact</h1>
+              <div class="grid-cols-3 grid gap-5">
+
+                <div class="bg-white rounded-xl py-6 px-10">
+                  <h1 class="text-[32px] text-[#15803D] ">500K+</h1>
+                  <p class="text-[16px] ">Trees Planted</p>
+                </div>
+                <div class="bg-white rounded-xl py-6 px-10">
+                  <h1 class="text-[32px] text-[#15803D] ">500K+</h1>
+                  <p class="text-[16px] "></p>
+                </div>
+                <div class="bg-white rounded-xl py-6 px-10">
+                  <h1 class="text-[32px] text-[#15803D] ">500K+</h1>
+                  <p class="text-[16px] ">Trees Planted</p>
+                </div>
+        </div>
+      </div>
+    </div>
+
+
+     <!-- Plant a Tree Today Section -->
+    <div class="text-center justify-center flex w-full bg-[#166534] min-h-[590px]">
+          <div class=" text-center space-y-10">
+              <h1 class="text-[32px] font-semibold text-white ">Plant a Tree Today</h1>
+            <div class="space-y-3 rounded-xl bg-[#15803D]">
+              <input type="text" placeholder="Your Name" class="input input-md rounded-lg" />
+              <input type="text" placeholder="Your Email Address" class="input input-md rounded-lg" /><br>
+              <select  class="input input-md rounded-lg">
+                <option>Number of Tree</option>
+                <option>Tree Two</option>
+                <option>Tree Three</option>
+                <option>Tree Four</option>
+              </select>
+            </div>
+      </div>
+    </div>
+
 
 
     <h1>hello test <i class="fa-solid fa-xmark"></i></h1>
