--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
     <!-- Navbar section start  -->
     <nav class=" justify-center flex bg-[#15803D]">
-  <div class="navbar container max-w-[1920px]">
+  <div class="navbar container ">
   <div class="navbar-start">
     <div class="dropdown">
       <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
@@ -63,19 +63,40 @@
       </div>
     </div>
 
+   <!-- About the Campaign section start  -->
+    <div class="w-full flex items-center my-22">
+      <div class="w-[1090px] m-auto justify-center ">
+      <h1 class="text-[32px] my-12 text-center">About the Campaign</h1>
+      <div class="grid grid-cols-2  items-center ">
+        <div class="campaing-img ">
+          <img src="./assets/about.png" alt="About Image">
+        </div>
+        <div class="p-10 space-y-5">
+          <p >Green Earth is a global tree plantation initiative dedicated to fighting climate change. Since our start, we’ve planted over 500,000 trees worldwide. By joining our campaign, you help restore forests, create habitats for wildlife, and combat global warming.</p>
+          <ol class="list-disc px-5">
+            <li>
+              Restoration of natural habitats
+            </li>
+            <li>
+              Improvement of air quality
+            </li>
+            <li>
+               Support for local communities
+            </li>
+          </ol>
 
-<br>
-<br>
-<br>
-<br>
-<br>
+        </div>
+      </div>
+    </div>
+    </div>
+
 
 
     <!-- Our Impact section start  -->
     <div class="text-center justify-center flex w-full bg-[#CFF0DC]">
           <div class="container text-center space-y-10 py-20">
               <h1 class="text-[32px] font-semibold ">Our Impact</h1>
-              <div class="grid-cols-3 grid gap-5">
+              <div class="grid-cols-3 grid gap-15">
 
                 <div class="bg-white rounded-xl py-6 px-10">
                   <h1 class="text-[32px] text-[#15803D] ">500K+</h1>
@@ -95,21 +116,29 @@
 
 
      <!-- Plant a Tree Today Section -->
-    <div class="text-center justify-center flex w-full bg-[#166534] min-h-[590px]">
-          <div class=" text-center space-y-10">
+    <div class="text-center items-center  justify-center flex w-full bg-[#166534] min-h-[590px]">
+          <div class=" text-center space-y-10 w-650px" >
               <h1 class="text-[32px] font-semibold text-white ">Plant a Tree Today</h1>
-            <div class="space-y-3 rounded-xl bg-[#15803D]">
-              <input type="text" placeholder="Your Name" class="input input-md rounded-lg" />
-              <input type="text" placeholder="Your Email Address" class="input input-md rounded-lg" /><br>
-              <select  class="input input-md rounded-lg">
-                <option>Number of Tree</option>
-                <option>Tree Two</option>
-                <option>Tree Three</option>
-                <option>Tree Four</option>
+            <div class="space-y-4 rounded-xl p-15 bg-[#15803D] w-full">
+              <input type="text" placeholder="Your Name" class="input input-md rounded-lg w-full" />
+              <input type="text" placeholder="Your Email Address" class="input input-md rounded-lg w-full" /><br>
+              <select class="select select-md rounded-lg w-full">
+                <option disabled selected>Number of Tree</option>
+                <option>Medium Apple</option>
+                <option>Medium Orange</option>
+                <option>Medium Tomato</option>
               </select>
+              <br>
+              <a class="btn rounded-[50px] text-[#15803D] bg-[#FACC15] border-none w-full mt-2">Donate Now</a> 
             </div>
       </div>
     </div>
+
+
+    <!-- Footer Section start  -->
+     <footer class="h-[72px] bg-[#14532D] justify-center items-center flex text-white">
+        <p>© 2025 Green Earth. All Rights Reserved.</p>
+     </footer>
 
 
 
