Card section start

--- a/index.html
+++ b/index.html
@@ -63,6 +63,53 @@
       </div>
     </div>
 
+        <!-- Choose Your Trees Section start -->
+    <div class="text-center">
+      <h1>Choose Your Trees</h1>
+      <div class="container m-auto">
+        <div class="max-w-[1650px] flex justify-between text-center">
+        <div class="left-side w-[250px] h-[300px] border-1 border-solid">Categories</div>
+        <div class="main-section grid grid-cols-3 gap-8">
+          
+
+            <div class="card bg-base-100 w-70 shadow-sm">
+              <figure class="border-10 rounded-xl border-white">
+                <img class="rounded-xl"
+                  src="https://img.daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.webp"
+                  alt="Shoes" />
+              </figure>
+              <div class="card-body">
+                <h2 class="card-title">
+                  Card Title
+                </h2>
+                <p>A card component has a figure, a body part, and inside body there are title and actions parts</p>
+                <div class="card-actions justify-end">
+                  <div class="badge badge-outline">Fashion</div>
+                  <div class="badge badge-outline">Products</div>
+                </div>
+              </div>
+            </div>
+
+
+
+
+
+
+        </div>
+        <div class="right-side w-[250px] h-[300px] border-1 border-solid">Left Side</div>
+      </div>
+      </div>
+    </div>
+
+
+
+
+
+
+
+
+
+
    <!-- About the Campaign section start  -->
     <div class="w-full flex items-center my-22">
       <div class="w-[1090px] m-auto justify-center ">
