all cart Fetching

--- a/index.html
+++ b/index.html
@@ -84,10 +84,11 @@
 
 
         <!-- Main content or Card section  -->
-        <div class="main-section grid grid-cols-3 gap-4">         
+        <!-- <div id="main-section" class="main-section grid grid-cols-3 gap-4">          -->
+        <div id="main-section">         
           
           <!-- card Start  -->
-            <div class="card bg-base-100 shadow-sm">
+            <!-- <div class="card bg-base-100 shadow-sm">
               <figure class="border-10 rounded-xl border-white w-full min-h-[200px] bg-[#EDEDED]">
                 <img class="rounded-xl w"
                   src=""
@@ -257,7 +258,7 @@
                   <button class="btn w-full bg-[#15803D] rounded-3xl text-white">Add to Cart</button>
                 </div>
               </div>
-            </div>
+            </div> -->
 
 
 
